# Minimalagent

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  __init__.py  automated_tagger.py  background_evaluator.py  check_job_questions.py  check_jobs.py  check_questions_structure.py  check_relationships.py  config.py  content_manager.py  corrected_jobs_20251004_125515.csv  docker-compose.yml  execute_sql.py  fix_database.py  interview_api.py  main.py  pyproject.toml  requirements.txt  scheduled_maintenance.py  test_api.py  test_background_evaluator.py  test_context_shape.py  test_end_to_end.py  test_integration.py  test_real_llm_evaluation.py  test_schedule_interview.py  test_simlibot.py  test_simlibot_no_auth.py  test_supabase.py
data/: README.md  generated_jobs_20251004_125248.csv  generated_questions_20251004_124618.csv  generated_questions_20251004_124807.csv  generated_questions_20251004_124941.csv  generated_questions_20251004_124955.csv  jobs_final_semantic_tags.csv  jobs_semantic_tags_analysis.json  question_tags_reference.csv  questions_semantic_tags.csv  semantic_tags_analysis.json
docs/: API_DOCUMENTATION.md  APIs.md  MANAGER_DASHBOARD.md  PIPECAT_BOT_REFERENCE.md  TODO_FUTURE_DEVELOPMENT.md  TODOs.md  TODOsgpt.md  component-lvl-spec.md  config.md  evaluatorprompt.md  pipeline.md  queries.md  refactor.md  style.md  supabase_tables.md  voice-ui-kit-integration.md
evaluator/: helpers.py
examples/: example_usage.py
frontend/: .eslintrc.cjs  API_DOCUMENTATION.md  PIPELINE_DOCUMENTATION.md  README.md  auth.html  auth.js  (+13 more)
(+159 files in other folders)
